# xdelta3-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: stream.rs
