[package]
name = "xdelta3"
version = "0.1.5"
authors = ["liushuyu <liushuyu011@gmail.com>", "Kay Lin <i@v2bv.net>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust binding for xdelta3"
keywords = ["xdelta", "patch", "vcdiff"]
repository = "https://github.com/liushuyu/xdelta3-rs"
exclude = [
    "xdelta3/xdelta3/py-compile"
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
futures-io = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
libc = "0.2"
log = "0.4"

[dev-dependencies]
async-std = "1.2"
env_logger = "0.7"
futures= "0.3"
structopt = "0.3"

[build-dependencies]
cc = "1.1.24"
rand = "0.6"
bindgen = { version = "0.70.1", default-features = true }
pkg-config = { version = "0.3", optional = true }

['cfg(target.aarch64-unknown-linux-musl)'.build-dependencies]
bindgen = { version = "0.70.1", default-features = false, features = ["logging", "prettyplease", "static"] }

[features]
default = ["stream"]
lzma = ["pkg-config"]
stream = ["futures-io", "futures-util"]

[[example]]
name = "xdelta3-rs"
